--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "he": "^1.2.0",
     "mysql2": "^3.2.0",
+    "natural": "^6.2.0",
     "openai": "^3.2.1"
   }
 }
