--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "zeezsoft",
   "license": "ISC",
   "dependencies": {
+    "bing-translate-api": "^2.9.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "he": "^1.2.0",
     "mysql2": "^3.2.0",
     "natural": "^6.2.0",
