added serverless function

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "serverless": {
+    "function": {
+      "maxDuration": 20
+    }
+  }
 }
